# lba2-classic-community

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LATEST_VERSION  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: docs-gate.yml  linux.yml  macos.yml  release-latest.yml  release-linux-appimage.yml  release-linux-tarball.yml  release-macos.yml  release-windows.yml  reusable-build-macos.yml  windows.yml
LIB386/H/SYSTEM/: ADELINE_TYPES.H  RESOLUTION.H
LIB386/SVGA/: CMakeLists.txt  COPYMASK.CPP  SCALESPI.CPP
LIB386/SYSTEM/: DEFFILE.CPP
LIB386/pol_work/: POLYGOUR.CPP
SOURCES/: BUILD_INFO.h.in  CMakeLists.txt  COMMON.H  CREDITS.H  C_EXTERN.H  DEFINES.H  EXTRA.CPP  GAMEMENU.CPP  GAMEMENU.H  INITADEL.C  INPUT.H  INVENT.H  LBA2.CFG  MEM.CPP  OBJECT.CPP  PERSO.CPP  PERSO.H  RES_DISCOVERY.CPP  RES_DISCOVERY.H  RES_PICKER.CPP  RES_PICKER.H  SAVEGAME.CPP  SAVEGAME.H  SAVEGAME_LOAD_BOUNDS.CPP  SAVEGAME_LOAD_BOUNDS.H  SORT.CPP  VALIDPOS.CPP  VERSION.CPP
SOURCES/3DEXT/: LOADISLE.CPP
SOURCES/CONSOLE/: CMakeLists.txt  CONSOLE_CMD.CPP  CONSOLE_GIVE.CPP  CONSOLE_GIVE.H
cmake/: git_version.cmake  write_version.cmake
docs/: ABI.md  ASCII_ART.md  ASM_TEST_COVERAGE_AUDIT.md  ASM_TO_CPP_REFERENCE.md  ASM_VALIDATION_PROGRESS.md  AUDIO.md  CAMERA.md  CI.md  CONFIG.md  CONSOLE.md  CRASH_INVESTIGATION.md  DEBUG.md  FEATURE_WORKFLOW.md  FRENCH_COMMENTS.md  GAME_DATA.md  GFX_OPTIONS.md  GLOSSARY.md  LBA_EDITOR.md  LIFECYCLES.md  MENU.md  PLATFORM.md  PLATFORM_AUDITS.md  README.md  RELEASING.md  SAVEGAME.md  SAVEGAME_ISSUE62_CHECKLIST.md  SCENES.md  SPRITES.md  TESTING.md  WIDESCREEN.md  WINDOWS.md
packaging/: Info.plist.in  appimage_env.sh.in  change-working-dir.hook  lba2.desktop  lba2cc.desktop  lba2cc.desktop.in  lba2cc.rc.in  make-appimage.sh
scripts/: save_probe.py  save_probe_lz_selftest.py
scripts/ci/: run-clang-tidy.sh
scripts/dev/: build-and-run.sh  build-linux-tarball.sh  build-macos-release.sh  build-windows-release.sh  extract_lba2_gog_media.py  iso_bin_extract.py  iso_bin_reader.py  run-savegame-corpus.sh  verify-release.sh
scripts/git-hooks/: pre-commit
scripts/packaging/: bundle-linux-tarball.sh  bundle-macos.sh  bundle-windows.sh  linux-readme.txt.in  macos-readme.txt.in  make-appimage.sh  windows-readme.txt.in
tests/: CMakeLists.txt
tests/SVGA/: test_scalespi.cpp
tests/console/: CMakeLists.txt  test_console_give.cpp
tests/copymask_negx/: CMakeLists.txt  test_copymask_negx.cpp
tests/deffile/: CMakeLists.txt  test_deffile_latin1.cpp
tests/discovery/: CMakeLists.txt  test_res_discovery.cpp
tests/pol_work/: test_polygour.cpp
tests/savegame/: CMakeLists.txt  test_load_bounds.cpp
tests/savegame/corpus/: .gitignore  README.md  build_manifest.py  run_harness.py
tests/savegame/corpus/saves/steam_classic_2023/: Anon1.LBA  Anon2.LBA  Ball of Sendell.LBA  Bu.LBA  DOS2.LBA  DT Otringal.LBA  Dark Monk.LBA  Desert Island.LBA  Desperado.LBA  Dissidents.LBA  Dome of the Slate.LBA  EM2.LBA  Emerald Moon.LBA  Emperor Palace.LBA  End game.LBA  Esmer Secret Base.LBA  Franco Elevator.LBA  Francos.LBA  Fully loaded horn.LBA  Gazogem.LBA  Hacienda.LBA  ICX.LBA  In the school.LBA  Island CX 4 Real.LBA  Island CX.LBA  Kidnapped!.LBA  Lazer Crystal.LBA  Lightning Spell.LBA  Lucky jump.LBA  Mos attack.LBA  Mosquibees.LBA  Oasis.LBA  Off to be a Wizard.LBA  Otringal .LBA  Pearl.LBA  Protection Spell.LBA  README.md  Race.LBA  Save the Queen.LBA  School of Magic.LBA  (+11 more)
tests/savegame_corpus/: README.md  run_harness.py
tests/version/: CMakeLists.txt  check_version.cmake
tools/: CMakeLists.txt  save_decompress.cpp
